0.4.15/_sources/api/napari.components.ViewerModel.rst
napari.components.ViewerModel
=============================

.. currentmodule:: napari.components

.. autoclass:: ViewerModel
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~ViewerModel.add_image
   
   
      ~ViewerModel.add_labels
   
   
      ~ViewerModel.add_layer
   
   
      ~ViewerModel.add_points
   
   
      ~ViewerModel.add_shapes
   
   
      ~ViewerModel.add_surface
   
   
      ~ViewerModel.add_tracks
   
   
      ~ViewerModel.add_vectors
   
   
      ~ViewerModel.bind_key
   
   
      ~ViewerModel.construct
   
   
      ~ViewerModel.copy
   
   
      ~ViewerModel.dict
   
   
      ~ViewerModel.enums_as_values
   
   
      ~ViewerModel.from_orm
   
   
      ~ViewerModel.json
   
   
      ~ViewerModel.open
   
   
      ~ViewerModel.open_sample
   
   
      ~ViewerModel.parse_file
   
   
      ~ViewerModel.parse_obj
   
   
      ~ViewerModel.parse_raw
   
   
      ~ViewerModel.reset
   
   
      ~ViewerModel.reset_view
   
   
      ~ViewerModel.rounded_division
   
   
      ~ViewerModel.schema
   
   
      ~ViewerModel.schema_json
   
   
      ~ViewerModel.update
   
   
      ~ViewerModel.update_forward_refs
   
   
      ~ViewerModel.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ViewerModel.class_keymap
      ~ViewerModel.events
      ~ViewerModel.experimental
      
      
      
      
      
      
      
      
      
      
      
      
      
      
      
      
      
      
<<<<<<<< HEAD:0.4.16/_sources/api/napari.components.ViewerModel.rst
      
========
>>>>>>>> b2b79a561 (Folder structure for versioned API docs):0.4.15/_sources/api/napari.components.ViewerModel.rst
   
   

   .. rubric:: Details